...
    provider: '交通部中央氣象署',
    license: '政府資料開放授權條款第 1 版',
    licenseUrl: 'https://data.gov.tw/license',
    homeUrl: 'https://opendata.cwa.gov.tw/',
  },
  {
    provider: 'Open-Meteo',
    license: 'CC BY 4.0',
    licenseUrl: 'https://creativecommons.org/licenses/by/4.0/',
    homeUrl: 'https://open-meteo.com/',
  },
];

...
