{
  "latitude": 25.06151,
  "longitude": 121.5194,
  "generationtime_ms": 0.29754638671875,
  "utc_offset_seconds": 28800,
  "timezone": "Asia/Taipei",
  "timezone_abbreviation": "GMT+8",
  "elevation": 12.0,
  "daily_units": {
    "time": "iso8601",
    "weather_code": "wmo code",
    "temperature_2m_max": "°C",
    "temperature_2m_min": "°C",
    "precipitation_sum": "mm",
    "wind_speed_10m_max": "km/h",
    "uv_index_max": "undefined"
  },
  "daily": {
    "time": ["2024-06-01"],
    "weather_code": [61],
    "temperature_2m_max": [29.2],
    "temperature_2m_min": [24.5],
    "precipitation_sum": [7.8],
    "wind_speed_10m_max": [13.0],
    "uv_index_max": [null]
  }
}
